--- a/.github/workflows/snk.yml
+++ b/.github/workflows/snk.yml
@@ -2,7 +2,7 @@ name: generate animation
 
 on:
   schedule:
-    - cron: "0 12 * * *" # every 6 hours
+    - cron: "0 12 * * *"
   workflow_dispatch:
 
 jobs:
